--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+Privacy Policy
 
+This privacy policy governs your use of the software application Custom Bible Reading Plan (“Application”) for mobile devices that was created by Samuel Riesterer.
+
+What information does the Application obtain and how is it used?
+
+The Application does not obtain any information about the user.
+
+User Provided Information
+
+The Application does not and cannot obtain any user provided information.
+
+Automatically Collected Information
+
+The Application does not obtain any automatically collected information. This Application does not collect precise information about the location of your mobile device.
+
+Do third parties see and/or have access to information obtained by the Application?
+
+Third parties do not have access to any information.
+
+Children
+
+The Application complies with the Children’s Online Privacy Protection Act (COPPA).
+
+Security
+
+We are concerned about safeguarding the confidentiality of your information. We provide physical, electronic, and procedural safeguards to protect information we process and maintain. For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate, develop or improve our Application. Please be aware that, although we endeavor provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches.
+ 
+Changes
+This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here and informing you via email or text message. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes. You can check the history of this policy by clicking here.
+
+Your Consent
+By using the Application, you are consenting to our processing of your information as set forth in this Privacy Policy now and as amended by us. "Processing,” means using cookies on a computer/hand held device or using or touching information in any way, including, but not limited to, collecting, storing, deleting, using, combining and disclosing information, all of which activities will take place in the United States. If you reside outside the United States your information will be transferred, processed and stored there under United States privacy standards.
+
+Contact us
+If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at samuelriesterer@outlook.com.
